--- a/Styles/ContextMenu/context_menu_ltr.css
+++ b/Styles/ContextMenu/context_menu_ltr.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #1b1a1d;
   z-index: 99;
   border-radius: 5px;
   font-family: SpaceGrotesk, vazir;
@@ -15,13 +14,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  background-color: #1b1a1d;
   padding: 8px;
   transition: 0.5s;
   margin: 4px 0;
 }
 .context-menu-item:not(.disabled):hover {
-    background-color: #40C057;
+  background-color: #40c057;
 }
 .context-menu-icon {
   order: 1;
@@ -32,5 +30,4 @@
 .context-menu-text {
   order: 2;
   font-size: 1.1em;
-  color: #dad6d6;
 }
