--- a/Styles/Main/style_ltr.css
+++ b/Styles/Main/style_ltr.css
@@ -2,7 +2,7 @@
 @import url("../TopBar/top_bar_ltr.css");
 @import url("../SideBar/side_bar_ltr.css");
 @import url("../TaskSection/task_section_ltr.css");
-@import url("../PopUp/pop_up_ltr.css");
+@import url("../Modal/modal_ltr.css");
 @import url("../Settings/settings_ltr.css");
 @import url("../TrashSection/trash-ltr.css");
 @import url("../UserCategoryPage/user_category_page_ltr.css");
@@ -28,6 +28,26 @@
   font-family: dastnevis;
   src: url(../../Fonts/danstevis.otf);
 }
+#preloader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1000;
+  transition: 1s;
+}
+#preloader-gif {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 20px;
+}
+#preloader-text {
+  font-family: SpaceGroteskMed;
+  font-size: 1.8em;
+}
 button {
   border: none;
   cursor: pointer;
@@ -42,6 +62,12 @@ input {
   margin: 0;
   padding: 0;
 }
+.visible {
+  display: flex !important;
+}
+.hidden {
+  display: none !important;
+}
 body {
   position: relative;
   display: flex;
@@ -50,8 +76,7 @@ body {
   align-items: center;
   /* box-sizing: border-box; */
   height: 100vh;
-  background: #264261;
-  font-family: 'SpaceGroteskReg','vazir';
+  font-family: "SpaceGroteskReg", "vazir";
   direction: ltr;
   overflow: hidden;
 }
