--- a/Styles/SideBar/side_bar_ltr.css
+++ b/Styles/SideBar/side_bar_ltr.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: #2e3843;
 }
 .side-bar-item {
   display: flex;
@@ -18,14 +17,12 @@
   position: relative;
   width: 80%;
   height: 50px;
-  background: #1b1a1d;
   border-radius: 5px;
   margin: 3px 0;
-  color: #dad6d6;
   transition: all 0.5s;
 }
 .side-bar-item:hover {
-  background-color: #40c057;
+  background-color: #40c057 !important;
   transform: scale(1.1) !important;
 }
 .side-bar-item-icon {
@@ -45,7 +42,6 @@
   align-self: center;
   padding: 10px 0;
   font-size: 1.3em;
-  color: #f5deb3;
   direction: ltr;
 }
 #clock {
@@ -74,7 +70,6 @@
   flex-direction: row;
   align-items: center;
   font-size: 1.3em;
-  color: wheat;
   direction: ltr;
 }
 #home-button {
@@ -98,7 +93,7 @@
 #trash-bin-button {
   order: 9;
 }
-#user-category-container{
+#user-category-container {
   order: 10;
   width: 100%;
   height: 300px;
@@ -107,10 +102,10 @@
   direction: rtl;
   margin-top: 15px;
 }
-#user-category-container::-webkit-scrollbar{
+#user-category-container::-webkit-scrollbar {
   display: none;
 }
-.user-category-item{
+.user-category-item {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -123,16 +118,15 @@
   transition: all 0.5s;
   direction: ltr;
 }
-.user-category-icon{
+.user-category-icon {
   width: 30px;
   height: 30px;
   margin-left: 5px;
 }
-.user-category-name{
+.user-category-name {
   margin-left: 12px;
-  color: #dad6d6;
   font-size: 1.3em;
-  font-family: SpaceGrotesk,vazir;
+  font-family: SpaceGrotesk, vazir;
 }
 .user-category-drop-down-button {
   position: absolute;
@@ -144,7 +138,7 @@
 .user-category-drop-down-icon {
   width: 25px;
   height: 25px;
-  }
+}
 #side-bar-footer {
   order: 11;
   display: flex;
