--- a/Styles/SideBar/side_bar_rtl.css
+++ b/Styles/SideBar/side_bar_rtl.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: #2e3843;
 }
 .side-bar-item {
   position: relative;
@@ -18,14 +17,13 @@
   justify-content: flex-start;
   width: 80%;
   height: 50px;
-  background: #1b1a1d;
   border-radius: 5px;
   margin: 3px 0;
   transition: all 0.5s;
 }
 .side-bar-item:hover {
   transform: scale(1.1);
-  background-color: #40c057;
+  background-color: #40c057 !important;
 }
 .side-bar-item-icon {
   width: 30px;
@@ -34,7 +32,6 @@
 }
 .side-bar-item-text {
   font-size: 1.3em;
-  color: #dad6d6;
   margin-right: 12px;
 }
 #full-date {
@@ -45,7 +42,6 @@
   align-self: center;
   padding: 10px 0;
   font-size: 1.3em;
-  color: wheat;
   direction: ltr;
 }
 #clock {
@@ -75,7 +71,6 @@
   flex-direction: row;
   align-items: center;
   font-size: 1.3em;
-  color: wheat;
   direction: ltr;
 }
 
@@ -100,7 +95,7 @@
 #trash-bin-button {
   order: 9;
 }
-#user-category-container{
+#user-category-container {
   order: 10;
   width: 100%;
   height: 300px;
@@ -109,7 +104,7 @@
   margin-top: 15px;
   direction: ltr;
 }
-.user-category-item{
+.user-category-item {
   position: relative;
   display: flex;
   flex-direction: row;
@@ -119,20 +114,18 @@
   height: 50px;
   border-radius: 5px;
   margin: 5px auto;
-  color: #dad6d6;
   transition: all 0.5s;
   direction: rtl;
 }
-.user-category-icon{
+.user-category-icon {
   width: 30px;
   height: 30px;
   margin-right: 5px;
 }
-.user-category-name{
+.user-category-name {
   margin-right: 12px;
   font-size: 1.3em;
-  font-family: SpaceGrotesk,vazir;
-  color: #dad6d6;
+  font-family: SpaceGrotesk, vazir;
 }
 .user-category-drop-down-button {
   position: absolute;
@@ -144,7 +137,7 @@
 .user-category-drop-down-icon {
   width: 25px;
   height: 25px;
-  }
+}
 
 #side-bar-footer {
   order: 11;
