--- a/Styles/TopBar/top_bar_rtl.css
+++ b/Styles/TopBar/top_bar_rtl.css
@@ -6,10 +6,10 @@
   align-items: center;
   position: absolute;
   top: 0;
-  right: 250px;
-  width: calc(100% - 250px);
+  right: 252px;
+  width: calc(100% - 252px);
   height: 60px;
-  background: #1b1a1d;
+  background: #232d3f;
 }
 #display-text {
   width: 60%;
