--- a/Styles/TrashSection/trash-ltr.css
+++ b/Styles/TrashSection/trash-ltr.css
@@ -1,15 +1,34 @@
 #trash-bin-section {
   order: 3;
   position: absolute;
-  top: 60px;
-  left: 250px;
-  width: calc(100% - 250px);
-  height: calc(100% - 80px);
+  top: 62px;
+  left: 252px;
+  width: calc(100% - 252px);
+  height: calc(100% - 62px);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 20px 0;
+}
+#trash-bin-header {
+  display: flex;
+  align-items: center;
+  width: calc(100% - 30px);
+  max-width: 850px;
+  margin: 10px 0 15px 20px;
+  height: fit-content;
+  padding: 10px;
+  border-radius: 10px;
+}
+#trash-bin-icon {
+  width: 50px;
+  height: 50px;
+}
+#trash-bin-title {
+  font-size: 1.7em;
+}
+#sort-all-trash {
+  order: 1;
 }
 .trashed-task-badge {
   width: fit-content;
@@ -19,11 +38,9 @@
   min-width: 90px;
   padding: 0 8px;
   height: 100%;
-  color: #dad6d6;
   position: absolute;
   right: 0;
   font-size: 1.1em;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  background-color: #ff4545;
 }
