--- a/Styles/UserCategoryPage/user_category_page_ltr.css
+++ b/Styles/UserCategoryPage/user_category_page_ltr.css
@@ -1,28 +1,26 @@
 #user-category-page {
   position: absolute;
-  top: 60px;
-  left: 250px;
-  width: calc(100% - 250px);
-  height: calc(100% - 80px);
+  top: 62px;
+  left: 252px;
+  width: calc(100% - 252px);
+  height: calc(100% - 62px);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 20px 0;
 }
 #user-category-page-header {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: flex-start;
   width: calc(100% - 40px);
   max-width: 850px;
-  margin-left: 20px;
-  padding: 0 10px 10px 10px;
-  border-bottom: 2px solid #dad6d6;
+  margin: 10px 0 15px 20px;
+  padding: 10px;
+  border-radius: 10px;
 }
 #user-category-page-title {
-  color: #dad6d6;
-  font-size: 1.5em;
+  font-size: 1.7em;
 }
 #user-category-page-icon {
   width: 50px;
