--- a/Styles/Modal/modal_ltr.css
+++ b/Styles/Modal/modal_ltr.css
@@ -4,11 +4,77 @@
   align-items: center;
   justify-content: flex-start;
   position: absolute;
+  top: 100px;
   z-index: 100;
   width: 350px;
   height: fit-content;
   padding: 10px;
   border-radius: 5px;
+}
+#modal-sub-page {
+  order: 1;
+  width: calc(100% - 30px);
+  padding: 0 15px 15px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#return-button {
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  margin: 5px 0;
+  font-size: 1.2em;
+}
+.modal-title {
+  width: 100%;
+  margin-bottom: 15px;
+  font-size: 1.5em;
+  text-align: center;
+}
+.modal-text-area {
+  width: calc(100% - 16px);
+  height: 100px;
+  resize: none;
+  margin-bottom: 15px;
+  border: 0;
+  scrollbar-width: thin;
+  padding: 8px;
+}
+.modal-description {
+  margin-bottom: 15px;
+  font-family: SpaceGrotesk;
+  text-align: justify;
+  font-size: 1em;
+}
+#copy-to-clipboard-button,
+#restore-button {
+  width: 100%;
+  height: 40px;
+  border: 0;
+  border-radius: 5px;
+  font-size: 1.2em;
+  margin: 5px 0;
+}
+#modal-buttons-container {
+  order: 2;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.modal-button {
+  width: 100%;
+  height: 60px;
+  padding: 10px;
+  border: 0;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+.modal-button-text {
+  font-size: 1.3em;
+  font-family: SpaceGrotesk;
 }
 #close-btn {
   order: 1;
@@ -111,6 +177,7 @@
 }
 .badge {
   position: absolute;
+  text-align: center;
   width: 95%;
   left: -14px;
   top: -10px;
@@ -128,7 +195,6 @@
   font-size: 1em;
   transform: translateX(14px) translateY(-7.5px);
   padding: 0 6px 1px 5px;
-  border-radius: 2px;
   letter-spacing: 1px;
   border-bottom: none;
   z-index: 50;
@@ -199,7 +265,7 @@
   display: grid;
   grid-template-columns: repeat(24, 1fr);
   overflow-x: scroll;
-  scrollbar-width: thin;
+  scrollbar-width: none;
   padding: 35px 0 24px 0;
 }
 .color-pallet {
@@ -226,7 +292,7 @@
   display: grid;
   grid-template-columns: repeat(18, 1fr);
   overflow-x: scroll;
-  scrollbar-width: thin;
+  scrollbar-width: none;
   padding: 35px 0 24px 0;
 }
 .pick-category-icon-button {
