--- a/Styles/Main/style_ltr.css
+++ b/Styles/Main/style_ltr.css
@@ -7,6 +7,7 @@
 @import url("../TrashSection/trash-ltr.css");
 @import url("../UserCategoryPage/user_category_page_ltr.css");
 @import url("../ContextMenu/context_menu_ltr.css");
+@import url("../Animation/animation_ltr.css");
 
 @font-face {
   font-family: vazir;
